<resources>
    <string name="app_name">precapstone</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="doesn_t_have_account">Doesn\'t have account?</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="lets_getting_start">Let\'s Getting Started!</string>
    <string name="password_error_message">password kurang dari 8 karakter</string>
    <string name="hi_username">Hi Username</string>
    <string name="income">Income</string>
    <string name="money_income">IDR 100.000</string>
    <string name="money_expenses">IDR 100.000</string>
    <string name="expenses">Expenses</string>
    <string name="history">History</string>

    <string name="letscalculate">Ayo Hitung Keuanganmu!</string>
    <string name="goals">Masukkan tujuan nominal keuangan Anda</string>
    <string name="income_input">Masukkan pendapatan per bulan Anda</string>
    <string name="expenses_input">Masukkan pengeluaran per bulan Anda</string>
    <string name="hitung">Hitung</string>

    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="fab">FAB</string>
    <string name="sambutan">Hi! Username</string>
    <string name="setting_icon_description">setting_icon</string>
    <string name="pilih_kategori_text">Ayo pilih kategorimu!</string>
    <string name="mobil_text">Mobil</string>
    <string name="rencanakan_pembelian_kendaraanmu_di_financify">Biar kemana-mana engga jalan kaki lagi, ya kan?</string>
    <string name="pernikahan">Pernikahan</string>
    <string name="gadget">Gadget</string>
    <string name="rencanakan_pembelian_gadget_impianmu_di_financify">Semakin canggih speknya pasti sehari-hari akan semakin enak!</string>
    <string name="rencanakan_anggaran_pernikahan_impianmu_di_financify">Kalau sudah terpenuhi, tinggal cari pasangannya, deh :(</string>
    <string name="kendaraan">Kendaraan</string>
    <string name="rencanakan_anggaran_liburanmu_bersama_financify">Waktunya keliling bumi dan melihat keajaiban dunia</string>
    <string name="traveling">Traveling</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="text_back">Kembali</string>
    <string name="rencanakan_anggaran_pendidikanmu_bersama_financify">Koleksi buku dan jadi yang terpintar di antara temanmu</string>
    <string name="keluar">Keluar</string>
    <string name="news_article">News Article</string>
    <string name="txt_bookmarks">Bookmarks</string>
    <string name="txt_share">Share</string>
    <string name="masukan_kota_dalam_huruf_kapital">Masukan Kota dalam huruf Kapital</string>
    <string name="detail">Detail</string>

</resources>