<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.view.login.LoginActivity">

    <View
        android:id="@+id/rounded_bg_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/rounded_bg_login"
        app:layout_constraintStart_toStartOf="@+id/rounded_bg_login"
        app:layout_constraintTop_toTopOf="@+id/rounded_bg_login" />

    <TextView
        android:id="@+id/login_usernametext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/email"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/welcometext"
        app:layout_constraintStart_toStartOf="@+id/welcometext"
        app:layout_constraintTop_toBottomOf="@+id/welcometext"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt_login_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/robotomono_regular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_usernametext"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/login_passwordtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_login_username"
        app:layout_constraintStart_toStartOf="@+id/edt_login_username"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_username" />

    <com.code.precapstone.ui.customview.CustomEditText
        android:id="@+id/edt_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="8dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:fontFamily="@font/robotomono_regular"
        app:layout_constraintEnd_toEndOf="@+id/login_passwordtext"
        app:layout_constraintStart_toStartOf="@+id/login_passwordtext"
        app:layout_constraintTop_toBottomOf="@+id/login_passwordtext"/>


    <TextView
        android:id="@+id/text_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/doesn_t_have_account"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/blue_primary"
        app:layout_constraintEnd_toEndOf="@+id/edt_login_password"
        app:layout_constraintStart_toStartOf="@+id/edt_login_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/text_register"
        app:layout_constraintStart_toStartOf="@+id/text_register"
        app:layout_constraintTop_toBottomOf="@+id/text_register" />

</androidx.constraintlayout.widget.ConstraintLayout>