<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.calculation.CalculationActivity">

    <View
        android:id="@+id/rounded_bg_calculation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text_back"
        android:textColor="@color/green_400"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/back_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/letscalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/letscalculate"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/rounded_bg_calculation"
        app:layout_constraintStart_toStartOf="@+id/rounded_bg_calculation"
        app:layout_constraintTop_toBottomOf="@+id/back_icon" />


    <TextView
        android:id="@+id/tvKota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/masukan_kota_dalam_huruf_kapital"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/letscalculate"
        app:layout_constraintStart_toStartOf="@+id/letscalculate"
        app:layout_constraintTop_toBottomOf="@+id/letscalculate"/>

    <EditText
        android:id="@+id/edt_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/robotomono_regular"
        android:padding="15dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKota" />

    <TextView
        android:id="@+id/financial_goals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/goals"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_city"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt_financial_goals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="8dp"
        android:padding="15dp"
        android:fontFamily="@font/robotomono_regular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/financial_goals"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:id="@+id/monthly_income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/income_input"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_financial_goals"
        app:layout_constraintStart_toStartOf="@+id/edt_financial_goals"
        app:layout_constraintTop_toBottomOf="@+id/edt_financial_goals"/>

    <EditText
        android:id="@+id/edt_monthly_income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="8dp"
        android:padding="15dp"
        android:fontFamily="@font/robotomono_regular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthly_income"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:id="@+id/monthly_expenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/expenses_input"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_monthly_income"
        app:layout_constraintStart_toStartOf="@+id/edt_monthly_income"
        app:layout_constraintTop_toBottomOf="@+id/edt_monthly_income"/>

    <EditText
        android:id="@+id/edt_monthly_expenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="8dp"
        android:padding="15dp"
        android:fontFamily="@font/robotomono_regular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthly_expenses"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Hasil Prediksi"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_monthly_expenses" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Estimasi Tercapai"
        android:textColor="@color/green_400"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvHasilPrediksiBulan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        tools:text="1 Tahun 8 Bulan"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
    

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/hitung"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_monthly_expenses"
        app:layout_constraintStart_toStartOf="@+id/edt_monthly_expenses" />



</androidx.constraintlayout.widget.ConstraintLayout>
