<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.articles.ArticleActivity">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.ArticleActivity"
        android:padding="8dp"
        android:id="@+id/parentLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center"
                    android:text="@string/news_article"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <ImageButton
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/txt_bookmarks"
                    android:src="@drawable/baseline_no_bookmark"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="8dp"/>
<!--                    android:onClick="@{listener::onClick}"-->

                <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/txt_share"
                    android:src="@drawable/baseline_share_24"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"/>
<!--                    android:onClick="@{listener::onClick}"/>-->

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="0.5dp"
                app:dividerColor="@color/black" />

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>